Mas contenido a numpy basics

--- a/nb01-empezando-python-cientifico.ipynb
+++ b/nb01-empezando-python-cientifico.ipynb
@@ -441,7 +441,7 @@
    "metadata": {},
    "source": [
     "### Que es numpy?\n",
-    "El objeto que nos provee de forma optimizada la siguiente funcionalidad\n",
+    "Pensemos en el como el objeto que nos provee con metodos optimizados la siguiente funcionalidad\n",
     "- arreglo de datos numericos, adecuado para datos cientificos (vectores, matrices)\n",
     "- operaciones vectorizadas para sus arreglos"
    ]
