--- a/nb02-numpy-basics.ipynb
+++ b/nb02-numpy-basics.ipynb
@@ -17,7 +17,7 @@
    },
    "outputs": [],
    "source": [
-    "# La convencion para el uso de NumPy\n",
+    "# La convención para el uso de NumPy\n",
     "import numpy as np "
    ]
   },
@@ -300,8 +300,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### \"Broadcasting\"\n",
-    "Describe el como se comportan los arreglos de numpy de diferenctes dimensiones durante las operaciones aritmeticas."
+    "### \"Broadcasting\"\n",
+    "Describe el como se comportan los arreglos de numpy de diferenctes dimensiones durante las operaciones aritmeticas.\n",
+    "\n",
+    "![alt text](images/np_broadcasting.png \"Ejemplos broadcasting\")"
    ]
   },
   {
@@ -461,7 +463,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Metodos ya incluidos en la clase ndarray\n",
+    "### Metodos ya incluidos en la clase ndarray\n",
     "Muchos metodos ya se encuentran integrados en la clase *ndarray* de NumPy"
    ]
   },
@@ -559,7 +561,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Por default estas operaciones se hacen sobre todos los elementos del arreglo, salvo que se especifiquen, que solo se desea hacer la operacion sobre algun eje en especifico."
+    "Por default estas operaciones se hacen sobre todos los elementos del arreglo, salvo que se especifiquen, que solo se desea hacer la operacion sobre algun eje en especifico.\n",
+    "\n",
+    "![Alt Text](images/axis.png \"Numpy axis order\")"
    ]
   },
   {
@@ -729,6 +733,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 35,
    "metadata": {
     "collapsed": false
@@ -824,6 +837,87 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0,  1,  2,  3,  4],\n",
+       "       [ 5,  6,  7,  8,  9],\n",
+       "       [10, 11, 12, 13, 14]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#\n",
+    "# Visualizando la seleccion de rangos\n",
+    "\n",
+    "arr = np.arange(15).reshape(3,5)\n",
+    "arr"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0, 1, 2, 3, 4],\n",
+       "       [5, 6, 7, 8, 9]])"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[0:2,:]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "![Alt Text](images/slicing1.png \"Rangos\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([11, 12, 13, 14])"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr[2,1:]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 49,
    "metadata": {
     "collapsed": false
@@ -848,7 +942,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -857,23 +951,23 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0 ,\n",
-      "1 ,\n",
-      "4 ,\n",
-      "9 ,\n",
-      "-999 ,\n",
-      "-999 ,\n",
-      "36 ,\n",
-      "49 ,\n",
-      "64 ,\n",
-      "81 ,\n"
+      "[0 1 2 3 4] ,\n",
+      "[5 6 7 8 9] ,\n",
+      "[10 11 12 13 14] ,\n"
      ]
     }
    ],
    "source": [
-    "# Iterar sobre sus elementos.\n",
+    "# Iterar sobre sus elementos.  \n",
     "for el in a:\n",
     "    print (el, ',')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aunque alerta, para que quisieramos iterar sobre sus elementos si tenemos funciones universales y podemos vectorizar la mayoria de las operaciones.."
    ]
   },
   {
@@ -1071,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -1082,7 +1176,7 @@
        "array([3, 4, 5, 6, 7, 8])"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1090,6 +1184,56 @@
    "source": [
     "# Elementos del arreglo, con alguna condicion\n",
     "a[(a>2) & (a<9)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[False, False, False, False, False],\n",
+       "       [ True,  True,  True,  True,  True],\n",
+       "       [False, False, False, False, False]], dtype=bool)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Los elementos que cumplan con alguna condición\n",
+    "(a > 4) & (a<10) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[999, 999, 999, 999, 999],\n",
+       "       [999,   6,   7,   8,   9],\n",
+       "       [ 10,  11,  12,  13,  14]])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Numpy where, si se cumple la condicion, recupera de \"x\", de otra forma, de \"y\"\n",
+    "np.where(a >5 , a , 999)"
    ]
   },
   {
@@ -1328,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false
    },
@@ -1340,7 +1484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false
    },
@@ -1348,13 +1492,59 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 5.,  3.],\n",
-       "       [ 8.,  3.],\n",
-       "       [ 0.,  8.],\n",
-       "       [ 4.,  9.]])"
+       "array([[ 2.,  6.],\n",
+       "       [ 4.,  4.]])"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 1.,  9.],\n",
+       "       [ 4.,  1.]])"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "b"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2.,  6.],\n",
+       "       [ 4.,  4.],\n",
+       "       [ 1.,  9.],\n",
+       "       [ 4.,  1.]])"
+      ]
+     },
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1366,7 +1556,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -1374,11 +1564,11 @@
     {
      "data": {
       "text/plain": [
-       "array([[ 5.,  3.,  0.,  8.],\n",
-       "       [ 8.,  3.,  4.,  9.]])"
+       "array([[ 2.,  6.,  1.,  9.],\n",
+       "       [ 4.,  4.,  4.,  1.]])"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
