readme update, + dask demo

--- a/nb05-pandas-demo-ejercicios-SOLUCIONES.ipynb
+++ b/nb05-pandas-demo-ejercicios-SOLUCIONES.ipynb
@@ -99,12 +99,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.18.1'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.__version__"
+   ]
   },
   {
    "cell_type": "code",
