--- a/nb00-python-basics.ipynb
+++ b/nb00-python-basics.ipynb
@@ -1030,6 +1030,7 @@
     }
    ],
    "source": [
+    "# Ciclo inline lista de listas.\n",
     "c2 = [ [ x**2 for x in l ] for l in arr2d ]\n",
     "c2"
    ]
@@ -1121,7 +1122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -1129,13 +1130,12 @@
    "source": [
     "def funcs(x):\n",
     "    return x +1 \n",
-    " \n",
-    "    "
+    "   "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -1156,7 +1156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
