--- a/nb05-pandas-demo-ejercicios-SOLUCIONES.ipynb
+++ b/nb05-pandas-demo-ejercicios-SOLUCIONES.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -86,7 +86,7 @@
        "4             Nazareno Apostol: Boy Ahas  1989"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -201,7 +201,7 @@
        "4            Steve Jobs  2015   $hutter  actor  1988 Opera House Patron   NaN"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -214,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -225,7 +225,7 @@
        "230407"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -293,15 +293,12 @@
        "195127  Pierrot's Problem, or How to Make a Fat Wife O...  1900"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "source": [
-    "# Cuales son las peliculas mas antiguas listadas en titulos?\n",
-    "titulos.sort_values('year').head()"
-   ]
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -314,10 +311,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "# Cuales son las peliculas mas antiguas listadas en titulos?\n",
+    "titulos.sort_values('year').head()"
+   ]
   },
   {
    "cell_type": "code",
